assets/lr_bar; add new class of lr bar to be left aligned and full width on mobile and right aligned on desktop fixes #2621

--- a/meinberlin/assets/scss/components/_lr_bar.scss
+++ b/meinberlin/assets/scss/components/_lr_bar.scss
@@ -20,9 +20,24 @@
     }
 }
 
+.lr-bar__sm-left-lg-right {
+    float: left;
+    min-width: 100%;
+    margin-top: 0.5 * $spacer;
+
+    > * {
+        display: inline-block;
+    }
+
+    @media screen and (min-width: $breakpoint) {
+        float: right;
+        min-width: auto;
+    }
+}
+
 .lr-bar--with-margin {
     margin-top: 1.5 * $spacer;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.5 * $spacer;
 
     &:first-child {
         margin-top: 0;
